--- a/flag-country/index.html
+++ b/flag-country/index.html
@@ -18,6 +18,9 @@
         <div id="country-display"></div>
         <div id="options-container"></div>
       </div>
+      <a href="/" class="home-link">
+        Voltar para o menu principal
+      </a>
     </main>
     <footer id="footer">
       Construído por Bruno Silvestre |
