fix links for gh pages

--- a/flag-country/index.html
+++ b/flag-country/index.html
@@ -18,7 +18,7 @@
         <div id="country-display"></div>
         <div id="options-container"></div>
       </div>
-      <a href="/" class="home-link">
+      <a href=".." class="home-link">
         Voltar para o menu principal
       </a>
     </main>
