--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <main>
       <div>
-        <a href="/country-flag">Ir para Country Flag Quiz</a>
+        <a href="country-flag">Ir para Country Flag Quiz</a>
         <span
           >Neste modo, você verá a bandeira de um país e deverá escolher o nome
           correto do país entre as 5 opções fornecidas.</span
         >
       </div>
       <div>
-        <a href="/flag-country">Ir para Flag Country Quiz</a>
+        <a href="flag-country">Ir para Flag Country Quiz</a>
         <span
           >Neste modo, você verá o nome de um país e deverá escolher a bandeira
           correta entre as 4 opções fornecidas.</span
